                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-07-2005 added: audio volume can now be changed in the dvdplayer
 - 11-07-2005 fixed: Parent dir was unpredictable on smb shares with a username but no password specified.
 - 11-07-2005 fixed: .nfo lookup info wasn't added to the video database.
 - 11-07-2005 changed: Cleanup of some of the dialog code.
 - 11-07-2005 changed: guilib/stdafx.h -> guilib/include.h in guilib to reduce clashes when VS can't decide which one is which.
 - 11-07-2005 changed: New numeric input dialog - handles time, date, numbers, ips, and numeric passwords.
 - 11-07-2005 fixed: ftp client, only bmp picture view works [the rest will follow] [GeminiServer]
 - 11-07-2005 fixed: ftp client: mplayer dllsend socket Winsock error in debug mode! [GeminiServer]
 - 10-07-2005 fixed: More than one item could become highlighted in Music Playlist window when skipping songs
 - 10-07-2005 fixed: Embedded album thumbs was broken again.
 - 09-07-2005 added: customized keymap for the Media Center Extender Remote (incl schematics)
 - 09-07-2005 changed: the search button in Music Luibrary is more intuitive now
 - 09-07-2005 fixed: Crash on up folder from root of library view.
 - 09-07-2005 fixed: Milkdrop - audio conversion fixed and cache size for preset loading increased.
 - 09-07-2005 fixed: my music, after start of scanning no control has the focus
 - 09-07-2005 updated: German language file
 - 09-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 09-07-2005 updated: Updated Swedish strings.xml Thanks limit"
 - 09-07-2005 changed: removed CUtil::FileExists() and replaced by CFile::Exists()